--- a/index.html
+++ b/index.html
@@ -101,10 +101,15 @@
   </div>
 
   <div class="meme-generator">
-    <h3>Meme Generator</h3>
-    <p>[Insert Meme Here]</p>
-    <button onclick="randomizeMeme()">Randomize Meme</button>
-  </div>
+  <h3>Meme Generator</h3>
+  <canvas id="memeCanvas" width="400" height="400" style="border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.1);"></canvas>
+  <br/>
+  <input type="text" id="topText" placeholder="Top text" style="margin-top:10px; width:45%;"/>
+  <input type="text" id="bottomText" placeholder="Bottom text" style="width:45%;"/>
+  <br/>
+  <button onclick="generateMeme()">Generate Meme</button>
+</div>
+
 
   <script>
     const quoteList = [];
@@ -188,14 +193,66 @@
     let coffeeCount = 0;
 
     function checkAnswer(answer) {
-      const correct = "Steve Jobs";
-      const feedback = document.getElementById("quizFeedback");
-      feedback.textContent = answer === correct ? "✅ Correct!" : "❌ Try again!";
-    }
+    const correct = "Steve Jobs";
+    const feedback = document.getElementById("quizFeedback");
+    feedback.textContent = answer === correct ? "✅ Correct!" : "❌ Try again!";
+  }
 
-    function randomizeMeme() {
-      alert("✨ Meme generator coming soon!");
-    }
-  </script>
+  const memeImages = [
+    "https://i.imgflip.com/1bij.jpg",
+    "https://i.imgflip.com/26am.jpg",
+    "https://i.imgflip.com/2fm6x.jpg",
+    "https://i.imgflip.com/30b1gx.jpg",
+    "https://i.imgflip.com/3si4.jpg"
+  ];
+
+  function generateMeme() {
+    const canvas = document.getElementById("memeCanvas");
+    const ctx = canvas.getContext("2d");
+    const topText = document.getElementById("topText").value;
+    const bottomText = document.getElementById("bottomText").value;
+    const img = new Image();
+    const randomIndex = Math.floor(Math.random() * memeImages.length);
+    img.crossOrigin = "anonymous";
+    img.src = memeImages[randomIndex];
+    img.onload = function () {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+      ctx.font = "bold 24px Arial";
+      ctx.fillStyle = "white";
+      ctx.strokeStyle = "black";
+      ctx.lineWidth = 2;
+      ctx.textAlign = "center";
+      ctx.fillText(topText, canvas.width / 2, 40);
+      ctx.strokeText(topText, canvas.width / 2, 40);
+      ctx.fillText(bottomText, canvas.width / 2, canvas.height - 20);
+      ctx.strokeText(bottomText, canvas.width / 2, canvas.height - 20);
+    };
+  }
+
+
+    const coffeeTrivia = [
+  "Coffee was originally chewed, not sipped!",
+  "Beethoven counted 60 beans per cup of coffee.",
+  "Espresso means 'pressed out' in Italian.",
+  "The first webcam watched a coffee pot at Cambridge University.",
+  "The word 'coffee' comes from the Arabic 'qahwa'."
+];
+
+function showCoffeeTrivia() {
+  const modal = document.getElementById("coffeeTriviaModal");
+  const random = Math.floor(Math.random() * coffeeTrivia.length);
+  modal.textContent = coffeeTrivia[random];
+  modal.style.display = "block";
+  setTimeout(() => {
+    modal.style.display = "none";
+  }, 4000);
+}
+
+setInterval(showCoffeeTrivia, 7000);
+
+</script>
+
+  
 </body>
 </html>
