--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
   <button onclick="generateMeme()">Generate Meme</button>
 </div>
 
+  <div id="coffeeTriviaModal" style="display:none; position:fixed; top:20px; right:20px; background-color:#ffeaa7; border:1px solid #dfe6e9; padding:10px 20px; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.2); font-weight:bold; color:#2d3436; font-family:'Segoe UI', sans-serif;">
+</div>
+
 
   <script>
     const quoteList = [];
