--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
     const randomQuotes = [
   { text: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" },
-  { text: "Coffee first. Schemes later.", author: "Yeon" },
+  { text: "Coffee first. Capstone later.", author: "Yeon" },
   { text: "Success is not final, failure is not fatal.", author: "Winston Churchill" },
 ];
 
@@ -500,10 +500,19 @@ function generateRandomMeme() {
 
     const coffeeTrivia = [
   "Coffee was originally chewed, not sipped!",
-  "Beethoven counted 60 beans per cup of coffee.",
   "Espresso means 'pressed out' in Italian.",
   "The first webcam watched a coffee pot at Cambridge University.",
   "The word 'coffee' comes from the Arabic 'qahwa'."
+  "Coffee is technically a fruit! The beans we brew are actually the seeds of a cherry-like fruit that grows on coffee trees.",
+  "Decaf doesn’t mean caffeine-free — it still contains about 1–2% of the original caffeine. Enough to keep your eyelids twitching during finals.",
+  "Finland drinks the most coffee per capita in the world. Their average? Four cups a day. Cozy culture goals.",
+  "Coffee was almost lost to history — it was banned in Mecca in the 16th century for 'stimulating radical thinking.' Luckily, the ban didn’t stick.",
+  "Contrary to myth, coffee won’t dehydrate you. It’s mostly water, and moderate consumption actually contributes to your daily hydration.",
+  "Espresso isn’t a type of bean — it’s a brewing method. Any coffee bean can be used to make espresso if brewed under pressure.",
+  "Legend says goats discovered coffee. A herder noticed his goats dancing after eating coffee cherries — and the rest is jittery history.",
+  "Beethoven was a coffee snob — he counted exactly 60 beans per cup before brewing. Precision brewing, classical edition.",
+  "The first webcam was invented to monitor a coffee pot at Cambridge University. Because no one wanted to walk across the hall for an empty pot.",
+  "Coffee was once called the 'wine of Islam' — praised for its energizing effects and used in spiritual rituals before it became a global staple."
 ];
 
 function showCoffeeTrivia() {
