--- a/index.html
+++ b/index.html
@@ -499,21 +499,22 @@ function generateRandomMeme() {
 
 
     const coffeeTrivia = [
-  "Coffee was originally chewed, not sipped!",
-  "Espresso means 'pressed out' in Italian.",
-  "The first webcam watched a coffee pot at Cambridge University.",
-  "The word 'coffee' comes from the Arabic 'qahwa'."
-  "Coffee is technically a fruit! The beans we brew are actually the seeds of a cherry-like fruit that grows on coffee trees.",
-  "Decaf doesn’t mean caffeine-free — it still contains about 1–2% of the original caffeine. Enough to keep your eyelids twitching during finals.",
-  "Finland drinks the most coffee per capita in the world. Their average? Four cups a day. Cozy culture goals.",
-  "Coffee was almost lost to history — it was banned in Mecca in the 16th century for 'stimulating radical thinking.' Luckily, the ban didn’t stick.",
-  "Contrary to myth, coffee won’t dehydrate you. It’s mostly water, and moderate consumption actually contributes to your daily hydration.",
-  "Espresso isn’t a type of bean — it’s a brewing method. Any coffee bean can be used to make espresso if brewed under pressure.",
-  "Legend says goats discovered coffee. A herder noticed his goats dancing after eating coffee cherries — and the rest is jittery history.",
-  "Beethoven was a coffee snob — he counted exactly 60 beans per cup before brewing. Precision brewing, classical edition.",
-  "The first webcam was invented to monitor a coffee pot at Cambridge University. Because no one wanted to walk across the hall for an empty pot.",
-  "Coffee was once called the 'wine of Islam' — praised for its energizing effects and used in spiritual rituals before it became a global staple."
+  "🦷☕ Coffee was originally chewed, not sipped! Early tribes ground the beans and mixed them with fat to make energy bites.",
+  "🔧🇮🇹 Espresso means 'pressed out' in Italian — it’s all about brewing under pressure, not the bean itself.",
+  "📹☕ The first webcam was invented to monitor a coffee pot at Cambridge University. No one wanted to walk across the hall for an empty pot!",
+  "🌍🕌 The word 'coffee' comes from the Arabic 'qahwa', which originally referred to wine — poetic and energizing.",
+  "🍒🌱 Coffee is technically a fruit! The beans we brew are seeds from a cherry-like fruit that grows on coffee trees.",
+  "😴⚡ Decaf doesn’t mean caffeine-free — it still contains 1–2% caffeine. Enough to keep your eyelids twitching during finals.",
+  "🇫🇮☕ Finland drinks the most coffee per capita in the world — averaging four cups a day. Cozy culture goals!",
+  "📜🚫 Coffee was almost lost to history — banned in Mecca in the 1500s for 'stimulating radical thinking.' Luckily, the ban didn’t stick.",
+  "💧☕ Contrary to myth, coffee won’t dehydrate you. It’s mostly water, and moderate sipping actually helps hydration.",
+  "🫘💨 Espresso isn’t a type of bean — it’s a brewing method. Any bean can be espresso if brewed with pressure.",
+  "🐐💃 Legend says goats discovered coffee — a herder saw them dancing after eating coffee cherries. The original caffeine party.",
+  "🎼☕ Beethoven was a coffee snob — he counted exactly 60 beans per cup before brewing. Precision brewing, classical edition.",
+  "👀📹 The first webcam was invented to monitor a coffee pot at Cambridge University. Because hallway disappointment is real.",
+  "🍷🕊️ Coffee was once called the 'wine of Islam' — praised for its energizing effects and used in spiritual rituals before going global."
 ];
+
 
 function showCoffeeTrivia() {
   const modal = document.getElementById("coffeeTriviaModal");
