--- a/index.html
+++ b/index.html
@@ -4,191 +4,194 @@
   <meta charset="UTF-8" />
   <title>Student Cozy Corner ☕️</title>
   <style>
-    body {
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #fff8f0;
-  color: #4e342e;
-  padding: 30px;
-  max-width: 900px;
-  margin: auto;
-}
-
-.section {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  margin-bottom: 40px;
-}
-
-.column {
-  flex: 1;
-  background-color: #fff3e0;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
-
-input[type="text"] {
-  width: 100%;
-  padding: 10px;
-  margin-top: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-}
-
-button {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #a1887f;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-}
-
-#confessionExpiry {
-  padding: 10px;
-  border-radius: 6px;
-  border: none;
-  background-color: #a1887f;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-#customFile {
-  margin-top: 10px;
-}
-
-.entry {
-  margin-top: 15px;
-  padding: 10px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-  position: relative;
-}
-
-.reactions {
-  display: flex;
-  gap: 8px;
-  margin-top: 8px;
-  transition: opacity 0.3s ease;
-}
-
-.reactions span {
-  font-size: 20px;
-  cursor: pointer;
-  opacity: 1;
-  transition: transform 0.2s ease, opacity 0.3s ease;
-}
-
-.reactions span:hover {
-  transform: scale(1.2);
-}
-
-.reactions[data-selected] span:not([data-active]) {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.reactions[data-selected]:hover span {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.entry:hover .reactions {
-  opacity: 1;
-}
-
-.entry:hover .reaction-circle {
-  opacity: 0;
-}
-
-.reaction-circle {
-  position: absolute;
-  bottom: -10px;
-  left: -10px;
-  background: #ffeaa7;
-  border-radius: 50%;
-  padding: 6px;
-  font-size: 14px;
-  box-shadow: 0 0 4px rgba(0,0,0,0.1);
-  opacity: 1;
-  transition: opacity 0.3s ease;
-}
-
-.top-reacted,
-.minigames,
-.meme-generator {
-  margin-bottom: 40px;
-}
-
-.top-reacted ol {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-  padding: 0;
-  list-style: none;
-}
-
-.top-reacted li {
-  flex: 1;
-  background: #fff3e0;
-  padding: 15px;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  position: relative;
-  transition: all 0.3s ease;
-}
-
-.top-reacted li:hover .reaction-counts {
-  display: block;
-}
-
-.reaction-counts {
-  display: none;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  font-size: 14px;
-  background: #ffeaa7;
-  padding: 5px 10px;
-  border-radius: 8px;
-}
-
-.emoji-burst {
-  position: absolute;
-  font-size: 24px;
-  animation: floatUp 1s ease-out forwards;
-  pointer-events: none;
-}
-
-@keyframes floatUp {
-  0% {
-    opacity: 1;
-    transform: translateY(0) scale(1);
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #fff8f0;
+    color: #4e342e;
+    padding: 30px;
+    max-width: 900px;
+    margin: auto;
   }
-  50% {
-    transform: translateY(-40px) scale(1.4);
+
+  .section {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 40px;
   }
-  100% {
+
+  .column {
+    flex: 1;
+    background-color: #fff3e0;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  }
+
+  input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+  }
+
+  button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #a1887f;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+
+  #confessionExpiry {
+    padding: 10px;
+    border-radius: 6px;
+    border: none;
+    background-color: #a1887f;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  #customFile {
+    margin-top: 10px;
+  }
+
+  .entry {
+    margin-top: 15px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+    position: relative;
+  }
+
+  .reactions {
+    display: flex;
+    gap: 8px;
+    margin-top: 8px;
     opacity: 0;
-    transform: translateY(-80px) scale(0.8);
+    pointer-events: none;
+    transition: opacity 0.3s ease;
   }
-}
 
-.scrollable-box {
-  max-height: 300px;
-  overflow-y: auto;
-  padding-right: 10px;
-}
+  .entry:hover .reactions {
+    opacity: 1;
+    pointer-events: auto;
+  }
 
+  .reactions span {
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 1;
+    transition: transform 0.2s ease, opacity 0.3s ease;
+  }
 
+  .reactions span:hover {
+    transform: scale(1.2);
+  }
 
-    
-  </style>
+  .reactions[data-selected] span:not([data-active]) {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .reactions[data-selected]:hover span {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .entry:hover .reaction-circle {
+    opacity: 0;
+  }
+
+  .reaction-circle {
+    position: absolute;
+    bottom: -10px;
+    left: 10px; /* ✅ nudged inward to avoid scroll clipping */
+    background: #ffeaa7;
+    border-radius: 50%;
+    padding: 6px;
+    font-size: 14px;
+    box-shadow: 0 0 4px rgba(0,0,0,0.1);
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    z-index: 10;
+  }
+
+  .top-reacted,
+  .minigames,
+  .meme-generator {
+    margin-bottom: 40px;
+  }
+
+  .top-reacted ol {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    padding: 0;
+    list-style: none;
+  }
+
+  .top-reacted li {
+    flex: 1;
+    background: #fff3e0;
+    padding: 15px;
+    border-radius: 12px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    position: relative;
+    transition: all 0.3s ease;
+  }
+
+  .top-reacted li:hover .reaction-counts {
+    display: block;
+  }
+
+  .reaction-counts {
+    display: none;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 14px;
+    background: #ffeaa7;
+    padding: 5px 10px;
+    border-radius: 8px;
+  }
+
+  .emoji-burst {
+    position: absolute;
+    font-size: 24px;
+    animation: floatUp 1s ease-out forwards;
+    pointer-events: none;
+  }
+
+  @keyframes floatUp {
+    0% {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
+    50% {
+      transform: translateY(-40px) scale(1.4);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(-80px) scale(0.8);
+    }
+  }
+
+  .scrollable-box {
+    max-height: 300px;
+    overflow-y: auto;
+    padding-right: 10px;
+    position: relative;
+    overflow-x: visible;
+  }
+</style>
+
 </head>
 <body>
 
